# Rocky64

./: .gitignore  README.md  geminiresearchsuggestions  serial_monitor.py  setup  temp_cam.py
deployment/: deploy.yml  local.yml  rock64_setup.sh
docs/: ARCHITECTURE.md
firmware/esp32-vision/: platformio.ini
firmware/esp32-vision/src/: camera_pins.h  main.cpp
firmware/mcu-motors/: platformio.ini  robot_firmware.ino
firmware/mcu-motors/src/: main.cpp
ros1_ws/: README.md
ros1_ws/scripts/: ps5_robot_controller.py
ros1_ws/src/arduino_serial_bridge/: CMakeLists.txt  package.xml
ros1_ws/src/arduino_serial_bridge/scripts/: arduino_serial_node.py
ros1_ws/src/esp32_camera_bridge/: CMakeLists.txt  package.xml
ros1_ws/src/esp32_camera_bridge/scripts/: camera_bridge.py
ros1_ws/src/ps5_controller_bridge/: CMakeLists.txt  package.xml
ros1_ws/src/ps5_controller_bridge/scripts/: ps5_ros_bridge.py
ros1_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros1_ws/src/robot_bringup/launch/: rock64_robot.launch
ros2_ws/: README.md  requirements.txt
ros2_ws/host_control/: README.md  camera_stream.py  high_level_control.py  main.py  serial_bridge.py
ros2_ws/src/robot_control/: package.xml  setup.py
ros2_ws/src/robot_control/launch/: robot_control_launch.py
ros2_ws/src/robot_control/resource/: robot_control
ros2_ws/src/robot_control/robot_control/: __init__.py  robot_control_node.py
