<?xml version="1.0"?>
<package format="2">
  <name>arduino_serial_bridge</name>
  <version>0.0.0</version>
  <description>Arduino Uno serial bridge for Rock64 motor control.</description>
  <maintainer email="developer@example.com">Robot Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
