<?xml version="1.0"?>
<package format="2">
  <name>ps5_controller_bridge</name>
  <version>0.0.0</version>
  <description>PS5 DualSense bridge to ROS1 cmd_vel topic.</description>
  <maintainer email="developer@example.com">Robot Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export/>
</package>
